[package]
name = "mutantdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
memmap2 = "0.9.4"
tempfile = "3.10.1"
thiserror = "1.0.60"
proto = { path = "proto" }
prost = "0.12.4"
once_cell = "1.19.0"
rand = "0.8.5"
log = { version = "0.4.21", features = ["std"] }
simplelog = "0.12.2"
ouroboros = "0.18.4"
#async
threadpool = "1.8.1"

#doesn't support an outer comparator, only impl Ord, which is inconvenient to say at least.
#crossbeam-skiplist = "0.1.3"

#piece of shit with generics
#binary-heap-plus = "0.5.0"